Fix vertical align issue of flexbox on IE10, 11

--- a/src/components/_errorMessage.scss
+++ b/src/components/_errorMessage.scss
@@ -2,7 +2,7 @@
 @import '~@style/_variables';
 
 .error-message {
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
