--- a/src/components/_loading.scss
+++ b/src/components/_loading.scss
@@ -12,7 +12,7 @@
 }
 
 .loading {
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
